Drop loops and degree 2 nodes

--- a/code/exploration.ipynb
+++ b/code/exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5955ffd7",
+   "id": "b5c39b41",
    "metadata": {},
    "source": [
     "# Explore data\n",
@@ -11,19 +11,37 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a92940f",
+   "id": "3f36a676",
    "metadata": {},
    "source": [
     "This notebook explores the input data set.\n",
     "\n",
     "Contact: Michael Szell (michael.szell@gmail.com)  \n",
     "Created: 2024-01-24  \n",
-    "Last modified: 2024-01-24  "
+    "Last modified: 2024-01-26  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8d59f47d",
+   "id": "105bb740",
+   "metadata": {},
+   "source": [
+    "## To do"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7589522f",
+   "metadata": {},
+   "source": [
+    "* X Drop non-main nodes\n",
+    "* X Drop loops (they are really dangling links)\n",
+    "* Find all simple cycles (bounded?-max length?) with networkX"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f568fda",
    "metadata": {},
    "source": [
     "## Imports"
@@ -32,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd387c81",
+   "id": "a94c6529",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70d6a132",
+   "id": "6069688d",
    "metadata": {},
    "source": [
     "## Functions"
@@ -54,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7886abcd",
+   "id": "167a5a11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,12 +85,17 @@
     "    for n in named_vertex_list:\n",
     "        pos = nodes_id.index(n)\n",
     "        layout.append(nodes_coords[pos])\n",
-    "    return layout"
+    "    return layout\n",
+    "\n",
+    "def plotCheck(G, nodes_id, nodes_coords):\n",
+    "    fig, ax = plt.subplots()\n",
+    "    layout = getLayout(G, nodes_id, nodes_coords)\n",
+    "    ig.plot(G, target=ax, vertex_size=6, layout=layout);"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d99d5a1b",
+   "id": "c26dbda9",
    "metadata": {},
    "source": [
     "## Exploration"
@@ -80,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7aa5a416",
+   "id": "00b4932b",
    "metadata": {},
    "source": [
     "### Load data"
@@ -89,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4def53aa",
+   "id": "42ae1e55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,17 +126,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "932f3fbf",
+   "id": "6fe41cce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nodes"
+    "edges.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ef0836b",
+   "id": "aa3c68f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c47ee7b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db7dd89f",
+   "id": "50986bbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65901553",
+   "id": "211594e3",
    "metadata": {},
    "source": [
     "### Turn into igraph object"
@@ -153,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94de66de",
+   "id": "18fc1444",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,19 +196,64 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b22f8fbc",
+   "id": "a989ac41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "790ca87c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
-    "fig, ax = plt.subplots()\n",
-    "layout = getLayout(G, nodes_id, nodes_coords)\n",
-    "ig.plot(G, target=ax, vertex_size=6, layout=layout);"
+    "plotCheck(G, nodes_id, nodes_coords)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e76bbe24",
+   "id": "644e8f48",
+   "metadata": {},
+   "source": [
+    "### Drop self-loops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f405b71",
+   "metadata": {},
+   "source": [
+    "They are really dangling links which go outside the region, were mistakenly connected to themselves."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a710810",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G.simplify(multiple=True, loops=True, combine_edges=min);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "274d8b15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot to double-check\n",
+    "plotCheck(G, nodes_id, nodes_coords)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f699a56c",
    "metadata": {},
    "source": [
     "### Drop dangling nodes"
@@ -184,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86b721d8",
+   "id": "b2225edb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,19 +283,84 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ebce46c",
-   "metadata": {},
+   "id": "e85f5ffc",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
-    "fig, ax = plt.subplots()\n",
-    "layout = getLayout(G, nodes_id, nodes_coords)\n",
-    "ig.plot(G, target=ax, vertex_size=6, layout=layout);"
+    "plotCheck(G, nodes_id, nodes_coords)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7047b919",
+   "id": "13b061b5",
+   "metadata": {},
+   "source": [
+    "### Drop degree 2 nodes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8dc11619",
+   "metadata": {},
+   "source": [
+    "This should include all non-ismain nodes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90d55eaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes_nonismain = nodes.loc[nodes['ismain'] == 0]\n",
+    "nodes_nonismain = nodes_nonismain['node_id'].to_list()\n",
+    "# Turn to dict for fast finding\n",
+    "nodes_nonismain = {nodes_nonismain[i]: True for i in range(len(nodes_nonismain))} "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2d3929d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_delete_ids = []\n",
+    "\n",
+    "# Unclear how to select nodes in igraph by name, so let's iterate through them\n",
+    "for v in G.vs:\n",
+    "#     if v[\"name\"] in nodes_nonismain and v.degree() == 2:\n",
+    "    if v.degree() == 2:\n",
+    "        # Remember node to delete\n",
+    "        to_delete_ids.append(v.index)\n",
+    "        # Add a new edge that combines the deleted ones\n",
+    "        sumoflengths = v.incident()[0].attributes()[\"weight\"] + v.incident()[1].attributes()[\"weight\"]\n",
+    "        G.add_edge(v.neighbors()[0].index, v.neighbors()[1].index, weight = sumoflengths)\n",
+    "\n",
+    "G.delete_vertices(to_delete_ids)\n",
+    "\n",
+    "# Re-simplify\n",
+    "G.simplify(multiple=True, loops=True, combine_edges=min);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88371c29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot to double-check\n",
+    "plotCheck(G, nodes_id, nodes_coords)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "030ce69e",
    "metadata": {},
    "source": [
     "### Get cycle basis"
@@ -226,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dade89b2",
+   "id": "5a26d252",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f636f0e",
+   "id": "d06580c1",
    "metadata": {},
    "source": [
     "Getting all simple cycles has not yet been implemented in igraph, see:  \n",
@@ -258,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb56b35b",
+   "id": "79133988",
    "metadata": {},
    "source": [
     "It has been implemented in networkX though: https://networkx.org/documentation/stable/reference/algorithms/generated/networkx.algorithms.cycles.simple_cycles.html#networkx.algorithms.cycles.simple_cycles"
