--- a/code/exploration.ipynb
+++ b/code/exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b5c39b41",
+   "id": "74184688",
    "metadata": {},
    "source": [
     "# Explore data\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f36a676",
+   "id": "1e3aac06",
    "metadata": {},
    "source": [
     "This notebook explores the input data set.\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "105bb740",
+   "id": "c211a68f",
    "metadata": {},
    "source": [
     "## To do"
@@ -31,17 +31,37 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7589522f",
+   "id": "074bd65e",
    "metadata": {},
    "source": [
+    "* Double-check cycle/edge lengths. For example 3-cycle east of Faxe\n",
+    "* If node-based analysis, then need to add cycle permutations?\n",
     "* X Drop non-main nodes\n",
     "* X Drop loops (they are really dangling links)\n",
-    "* Find all simple cycles (bounded?-max length?) with networkX"
+    "* X Find all simple cycles (bounded?-max length?) with networkX"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3f568fda",
+   "id": "11991e47",
+   "metadata": {},
+   "source": [
+    "## Parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3b3b395",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cycle_numnode_bound = 20  # From 30 it starts getting slow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd70eb02",
    "metadata": {},
    "source": [
     "## Imports"
@@ -50,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a94c6529",
+   "id": "fbd6e63e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,12 +78,13 @@
     "import igraph as ig\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import networkx as nx\n",
     "from functools import reduce"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6069688d",
+   "id": "63ef6929",
    "metadata": {},
    "source": [
     "## Functions"
@@ -72,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "167a5a11",
+   "id": "5b1c5eb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,12 +111,19 @@
     "def plotCheck(G, nodes_id, nodes_coords):\n",
     "    fig, ax = plt.subplots()\n",
     "    layout = getLayout(G, nodes_id, nodes_coords)\n",
-    "    ig.plot(G, target=ax, vertex_size=6, layout=layout);"
+    "    ig.plot(G, target=ax, vertex_size=6, layout=layout);\n",
+    "    \n",
+    "def getCycleLength(c):\n",
+    "    l = 0\n",
+    "    cl = len(c)\n",
+    "    for i in range(cl):\n",
+    "        l += Gnx[c[i%cl]][c[(i+1)%cl]][\"weight\"]\n",
+    "    return l"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c26dbda9",
+   "id": "6035a096",
    "metadata": {},
    "source": [
     "## Exploration"
@@ -103,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00b4932b",
+   "id": "46405879",
    "metadata": {},
    "source": [
     "### Load data"
@@ -112,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42ae1e55",
+   "id": "47c80d52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fe41cce",
+   "id": "429c92d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa3c68f3",
+   "id": "b53244b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c47ee7b7",
+   "id": "06c4aed8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50986bbb",
+   "id": "e146acf3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "211594e3",
+   "id": "85999105",
    "metadata": {},
    "source": [
     "### Turn into igraph object"
@@ -186,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18fc1444",
+   "id": "13b9c29d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a989ac41",
+   "id": "d79f6131",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "790ca87c",
+   "id": "de1dff4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "644e8f48",
+   "id": "1cbf29af",
    "metadata": {},
    "source": [
     "### Drop self-loops"
@@ -224,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f405b71",
+   "id": "929ba085",
    "metadata": {},
    "source": [
     "They are really dangling links which go outside the region, were mistakenly connected to themselves."
@@ -233,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a710810",
+   "id": "49caddf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "274d8b15",
+   "id": "f64f312f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f699a56c",
+   "id": "bfd4fcea",
    "metadata": {},
    "source": [
     "### Drop dangling nodes"
@@ -262,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2225edb",
+   "id": "b86bab53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e85f5ffc",
+   "id": "9fc77d69",
    "metadata": {
     "scrolled": false
    },
@@ -295,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13b061b5",
+   "id": "97207881",
    "metadata": {},
    "source": [
     "### Drop degree 2 nodes"
@@ -303,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dc11619",
+   "id": "393cdc41",
    "metadata": {},
    "source": [
     "This should include all non-ismain nodes."
@@ -312,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90d55eaa",
+   "id": "839ca788",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2d3929d",
+   "id": "f5ecf3be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88371c29",
+   "id": "79e39edb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "030ce69e",
+   "id": "a16486c5",
    "metadata": {},
    "source": [
     "### Get cycle basis"
@@ -369,25 +397,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a26d252",
-   "metadata": {},
+   "id": "59a338b8",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# https://python.igraph.org/en/latest/api/igraph.GraphBase.html#fundamental_cycles\n",
     "fcycles = {}\n",
+    "fcycles_lengths = []\n",
     "cid = 0\n",
     "for c in G.fundamental_cycles():\n",
     "    # Add some statistics\n",
     "    ws = [G.es(eid)['weight'] for eid in c]\n",
     "    fcycles[cid] = {\"edges\": c, \"length\": sum(reduce(lambda a, b: a + b, ws))}\n",
-    "    cid += 1\n",
-    "    \n",
-    "fcycles"
+    "    fcycles_lengths.append(len(c))\n",
+    "    cid += 1"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d06580c1",
+   "id": "00172c31",
    "metadata": {},
    "source": [
     "Getting all simple cycles has not yet been implemented in igraph, see:  \n",
@@ -401,10 +431,127 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79133988",
+   "id": "e7da7ef4",
    "metadata": {},
    "source": [
     "It has been implemented in networkX though: https://networkx.org/documentation/stable/reference/algorithms/generated/networkx.algorithms.cycles.simple_cycles.html#networkx.algorithms.cycles.simple_cycles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14fc3bb6",
+   "metadata": {},
+   "source": [
+    "### Get all simple cycles via nx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c114261",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Gnx = G.to_networkx()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a51a2b60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Sanity checks\n",
+    "# for (u, v, wt) in Gnx.edges.data('weight'):\n",
+    "#     print(f\"({u}, {v}, {wt:.8})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93f9f245",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cycle_numnode_bound = 3\n",
+    "allcycles_generator = nx.simple_cycles(Gnx, length_bound=cycle_numnode_bound)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb0ebd03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allcycles = {}\n",
+    "nodes_done = set()\n",
+    "numcycles = 0\n",
+    "for c in allcycles_generator:\n",
+    "    sourcenode = c[0]\n",
+    "    c_length = getCycleLength(c)\n",
+    "    numcycles += 1\n",
+    "    if sourcenode in nodes_done:\n",
+    "        allcycles[sourcenode][\"cycles\"].append(c)\n",
+    "        allcycles[sourcenode][\"lengths\"].append(c_length)\n",
+    "        allcycles[sourcenode][\"numnodes\"].append(len(c))\n",
+    "    else:\n",
+    "        allcycles[sourcenode] = {\"cycles\": [c], \"lengths\": [c_length], \"numnodes\": [len(c)]}\n",
+    "        nodes_done.add(sourcenode)\n",
+    "print(\"Found \" + str(numcycles) + \" cycles for length bound \" + str(cycle_numnode_bound))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92c9e2d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# allcycles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da1e663a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allcyclelengths = np.zeros(numcycles)\n",
+    "allcyclenumnodes = np.zeros(numcycles, dtype=int)\n",
+    "i = 0\n",
+    "for j in allcycles:\n",
+    "    l = len(allcycles[j][\"lengths\"])\n",
+    "    allcyclelengths[i:i+l] = allcycles[j][\"lengths\"]\n",
+    "    allcyclenumnodes[i:i+l] = allcycles[j][\"numnodes\"]\n",
+    "    i += l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42638704",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(8, 3))\n",
+    "axes1 = fig.add_axes([0.1, 0.1, 0.35, 0.8])\n",
+    "axes2 = fig.add_axes([0.55, 0.1, 0.35, 0.8])\n",
+    "\n",
+    "axes1.hist(allcyclelengths, density=True)\n",
+    "axes1.set_xlabel('Length [m]')\n",
+    "axes1.set_ylabel('Frequency')\n",
+    "axes1.set_title('Cycle lengths')\n",
+    "\n",
+    "axes2.hist(allcyclenumnodes, density=True, bins=list(range(cycle_numnode_bound+1)))\n",
+    "axes2.set_xlabel('Nodes')\n",
+    "axes2.set_title('Nodes per cycle')\n",
+    "axes2.set_xlim([0, cycle_numnode_bound+0.5])\n",
+    "\n",
+    "plt.text(cycle_numnode_bound/20,0.01, \"Bound: \" + str(cycle_numnode_bound))\n",
+    "plt.text(cycle_numnode_bound/20,0.04, \"Cycles: \" + str(numcycles));"
    ]
   }
  ],
