Add cycle permutations for node-based analysis

--- a/code/exploration.ipynb
+++ b/code/exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "74184688",
+   "id": "2e582dfd",
    "metadata": {},
    "source": [
     "# Explore data\n",
@@ -11,19 +11,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e3aac06",
+   "id": "2bc9b960",
    "metadata": {},
    "source": [
     "This notebook explores the input data set.\n",
     "\n",
     "Contact: Michael Szell (michael.szell@gmail.com)  \n",
     "Created: 2024-01-24  \n",
-    "Last modified: 2024-01-26  "
+    "Last modified: 2024-01-29  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c211a68f",
+   "id": "5126c030",
    "metadata": {},
    "source": [
     "## To do"
@@ -31,11 +31,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "074bd65e",
+   "id": "5faeedc4",
    "metadata": {},
    "source": [
     "* Double-check cycle/edge lengths. For example 3-cycle east of Faxe\n",
-    "* If node-based analysis, then need to add cycle permutations?\n",
+    "* X Add cycle permutations for node-based analysis\n",
     "* X Drop non-main nodes\n",
     "* X Drop loops (they are really dangling links)\n",
     "* X Find all simple cycles (bounded?-max length?) with networkX"
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11991e47",
+   "id": "7c3308b0",
    "metadata": {},
    "source": [
     "## Parameters"
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3b3b395",
+   "id": "d06672f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd70eb02",
+   "id": "5d0a7b7f",
    "metadata": {},
    "source": [
     "## Imports"
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbd6e63e",
+   "id": "f81d35c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63ef6929",
+   "id": "876e2b5b",
    "metadata": {},
    "source": [
     "## Functions"
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b1c5eb4",
+   "id": "9a407c7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6035a096",
+   "id": "06c9f290",
    "metadata": {},
    "source": [
     "## Exploration"
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46405879",
+   "id": "bcd4d066",
    "metadata": {},
    "source": [
     "### Load data"
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47c80d52",
+   "id": "cf6ab763",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "429c92d7",
+   "id": "d34cad82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b53244b4",
+   "id": "ca03e828",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06c4aed8",
+   "id": "39e4ccb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e146acf3",
+   "id": "70d16eda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85999105",
+   "id": "a2a75e67",
    "metadata": {},
    "source": [
     "### Turn into igraph object"
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13b9c29d",
+   "id": "67408e36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d79f6131",
+   "id": "cdd2b50f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de1dff4b",
+   "id": "ef36979d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cbf29af",
+   "id": "11803118",
    "metadata": {},
    "source": [
     "### Drop self-loops"
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "929ba085",
+   "id": "39599aef",
    "metadata": {},
    "source": [
     "They are really dangling links which go outside the region, were mistakenly connected to themselves."
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49caddf5",
+   "id": "a6b2dc9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f64f312f",
+   "id": "3ae13704",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfd4fcea",
+   "id": "710975c4",
    "metadata": {},
    "source": [
     "### Drop dangling nodes"
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b86bab53",
+   "id": "3279f51f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fc77d69",
+   "id": "89a09ffc",
    "metadata": {
     "scrolled": false
    },
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97207881",
+   "id": "9f555e54",
    "metadata": {},
    "source": [
     "### Drop degree 2 nodes"
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "393cdc41",
+   "id": "e4664f3a",
    "metadata": {},
    "source": [
     "This should include all non-ismain nodes."
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "839ca788",
+   "id": "6ca7071c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5ecf3be",
+   "id": "e47cadff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79e39edb",
+   "id": "5ccfbc29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a16486c5",
+   "id": "bc5a1811",
    "metadata": {},
    "source": [
     "### Get cycle basis"
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59a338b8",
+   "id": "cfa8dd64",
    "metadata": {
     "scrolled": true
    },
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00172c31",
+   "id": "c8f07b37",
    "metadata": {},
    "source": [
     "Getting all simple cycles has not yet been implemented in igraph, see:  \n",
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7da7ef4",
+   "id": "8b714ef4",
    "metadata": {},
    "source": [
     "It has been implemented in networkX though: https://networkx.org/documentation/stable/reference/algorithms/generated/networkx.algorithms.cycles.simple_cycles.html#networkx.algorithms.cycles.simple_cycles"
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14fc3bb6",
+   "id": "a1fee5e7",
    "metadata": {},
    "source": [
     "### Get all simple cycles via nx"
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c114261",
+   "id": "6de93c17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a51a2b60",
+   "id": "90bb6350",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,52 +470,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93f9f245",
+   "id": "30ffef39",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cycle_numnode_bound = 3\n",
-    "allcycles_generator = nx.simple_cycles(Gnx, length_bound=cycle_numnode_bound)"
+    "cycle_numnode_bound = 20 # temporary for testing. Parameter also defined on top of notebook"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb0ebd03",
+   "id": "9b6987ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allcycles_unique = {}\n",
+    "nodes_done = set()\n",
+    "numcycles_unique = 0\n",
+    "allcycles_generator = nx.simple_cycles(Gnx, length_bound=cycle_numnode_bound)\n",
+    "for c in allcycles_generator:\n",
+    "    sourcenode = c[0]\n",
+    "    c_length = getCycleLength(c)\n",
+    "    numcycles_unique += 1\n",
+    "    if sourcenode in nodes_done:\n",
+    "        allcycles_unique[sourcenode][\"cycles\"].append(c)\n",
+    "        allcycles_unique[sourcenode][\"lengths\"].append(c_length)\n",
+    "        allcycles_unique[sourcenode][\"numnodes\"].append(len(c))\n",
+    "    else:\n",
+    "        allcycles_unique[sourcenode] = {\"cycles\": [c], \"lengths\": [c_length], \"numnodes\": [len(c)]}\n",
+    "        nodes_done.add(sourcenode)\n",
+    "print(\"Found \" + str(numcycles_unique) + \" unique cycles for length bound \" + str(cycle_numnode_bound))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5801d700",
    "metadata": {},
    "outputs": [],
    "source": [
     "allcycles = {}\n",
     "nodes_done = set()\n",
     "numcycles = 0\n",
+    "allcycles_generator = nx.simple_cycles(Gnx, length_bound=cycle_numnode_bound)\n",
     "for c in allcycles_generator:\n",
     "    sourcenode = c[0]\n",
     "    c_length = getCycleLength(c)\n",
-    "    numcycles += 1\n",
-    "    if sourcenode in nodes_done:\n",
-    "        allcycles[sourcenode][\"cycles\"].append(c)\n",
-    "        allcycles[sourcenode][\"lengths\"].append(c_length)\n",
-    "        allcycles[sourcenode][\"numnodes\"].append(len(c))\n",
-    "    else:\n",
-    "        allcycles[sourcenode] = {\"cycles\": [c], \"lengths\": [c_length], \"numnodes\": [len(c)]}\n",
-    "        nodes_done.add(sourcenode)\n",
+    "    for sourcenode in c:\n",
+    "        numcycles += 1\n",
+    "        if sourcenode in nodes_done:\n",
+    "            allcycles[sourcenode][\"cycles\"].append(c)\n",
+    "            allcycles[sourcenode][\"lengths\"].append(c_length)\n",
+    "            allcycles[sourcenode][\"numnodes\"].append(len(c))\n",
+    "        else:\n",
+    "            allcycles[sourcenode] = {\"cycles\": [c], \"lengths\": [c_length], \"numnodes\": [len(c)]}\n",
+    "            nodes_done.add(sourcenode)\n",
     "print(\"Found \" + str(numcycles) + \" cycles for length bound \" + str(cycle_numnode_bound))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92c9e2d0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# allcycles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "da1e663a",
+   "id": "8e5b76cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42638704",
+   "id": "74214e96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +558,7 @@
     "\n",
     "axes1.hist(allcyclelengths, density=True)\n",
     "axes1.set_xlabel('Length [m]')\n",
-    "axes1.set_ylabel('Frequency')\n",
+    "axes1.set_ylabel('Probability')\n",
     "axes1.set_title('Cycle lengths')\n",
     "\n",
     "axes2.hist(allcyclenumnodes, density=True, bins=list(range(cycle_numnode_bound+1)))\n",
