Add PATH and save results

--- a/code/exploration.ipynb
+++ b/code/exploration.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Explore data\n",
-    "## Project: Cycling node network loop analysis"
+    "## Project: Bicycle node network loop analysis"
    ]
   },
   {
@@ -56,7 +56,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cycle_numnode_bound = 20  # From 30 it starts getting slow"
+    "cycle_numnode_bound = 20  # From 30 it starts getting slow\n",
+    "\n",
+    "PATH = {\n",
+    "    \"data_in\": \"../data/input/faxe/network/\",\n",
+    "    \"data_out\": \"../data/processed/faxe/\"\n",
+    "}"
    ]
   },
   {
@@ -79,7 +84,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import networkx as nx\n",
-    "from functools import reduce"
+    "from functools import reduce\n",
+    "import pickle "
    ]
   },
   {
@@ -144,8 +150,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "edges = gpd.read_file(r'../data/input/faxe/network/network_edges_no_parallel.gpkg')\n",
-    "nodes = gpd.read_file(r'../data/input/faxe/network/nodes_edges_parallel.gpkg')\n",
+    "edges = gpd.read_file(PATH['data_in'] + 'network_edges_no_parallel.gpkg')\n",
+    "nodes = gpd.read_file(PATH['data_in'] + 'nodes_edges_parallel.gpkg')\n",
     "# Set CRS\n",
     "edges.set_crs('epsg:25832')\n",
     "nodes.set_crs('epsg:25832');"
@@ -439,6 +445,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "05c013be",
+   "metadata": {},
+   "source": [
+    "Therefore, we do not use igraph's cycle basis, but go ahead with networkX."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a1fee5e7",
    "metadata": {},
    "source": [
@@ -474,7 +488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cycle_numnode_bound = 20 # temporary for testing. Parameter also defined on top of notebook"
+    "cycle_numnode_bound = 30 # temporary for testing. Parameter also defined on top of notebook"
    ]
   },
   {
@@ -549,7 +563,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "74214e96",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "fig = plt.figure(figsize=(8, 3))\n",
@@ -568,6 +584,29 @@
     "\n",
     "plt.text(cycle_numnode_bound/20,0.01, \"Bound: \" + str(cycle_numnode_bound))\n",
     "plt.text(cycle_numnode_bound/20,0.04, \"Cycles: \" + str(numcycles));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f5bd16a",
+   "metadata": {},
+   "source": [
+    "## Save cycle inventory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f65f8997",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(PATH['data_out'] + 'cycleinventory_'+str(cycle_numnode_bound)+'.pkl', 'wb') as f:\n",
+    "    pickle.dump(allcycles, f)\n",
+    "    pickle.dump(allcyclelengths, f)\n",
+    "    pickle.dump(allcyclenumnodes, f)\n",
+    "    pickle.dump(G, f)\n",
+    "    pickle.dump(cycle_numnode_bound, f)"
    ]
   }
  ],
