--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -5,7 +5,7 @@
    "id": "2e582dfd",
    "metadata": {},
    "source": [
-    "# Explore data\n",
+    "# 01. Create loop inventory\n",
     "## Project: Bicycle node network loop analysis"
    ]
   },
@@ -14,7 +14,7 @@
    "id": "2bc9b960",
    "metadata": {},
    "source": [
-    "This notebook explores the input data set.\n",
+    "This notebook creates a loop inventory from the input data set.\n",
     "\n",
     "Contact: Michael Szell (michael.szell@gmail.com)  \n",
     "Created: 2024-01-24  \n",
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cycle_numnode_bound = 20  # From 30 it starts getting slow\n",
+    "cycle_numnode_bound = 30  # From 30 it starts getting slow\n",
     "\n",
     "PATH = {\n",
     "    \"data_in\": \"../data/input/faxe/network/\",\n",
@@ -114,10 +114,11 @@
     "        layout.append(nodes_coords[pos])\n",
     "    return layout\n",
     "\n",
-    "def plotCheck(G, nodes_id, nodes_coords):\n",
+    "def plotCheck(G, nodes_id, nodes_coords, vertex_size = 6):\n",
     "    fig, ax = plt.subplots()\n",
     "    layout = getLayout(G, nodes_id, nodes_coords)\n",
-    "    ig.plot(G, target=ax, vertex_size=6, layout=layout);\n",
+    "    ig.plot(G, target=ax, vertex_size=vertex_size, layout=layout);\n",
+    "    return fig\n",
     "    \n",
     "def getCycleLength(c):\n",
     "    l = 0\n",
@@ -132,7 +133,7 @@
    "id": "06c9f290",
    "metadata": {},
    "source": [
-    "## Exploration"
+    "## Processing data"
    ]
   },
   {
@@ -445,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05c013be",
+   "id": "cbbca691",
    "metadata": {},
    "source": [
     "Therefore, we do not use igraph's cycle basis, but go ahead with networkX."
@@ -479,16 +480,6 @@
     "# # Sanity checks\n",
     "# for (u, v, wt) in Gnx.edges.data('weight'):\n",
     "#     print(f\"({u}, {v}, {wt:.8})\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30ffef39",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cycle_numnode_bound = 30 # temporary for testing. Parameter also defined on top of notebook"
    ]
   },
   {
@@ -588,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f5bd16a",
+   "id": "0bd274d8",
    "metadata": {},
    "source": [
     "## Save cycle inventory"
@@ -597,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f65f8997",
+   "id": "d2050153",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +597,10 @@
     "    pickle.dump(allcyclelengths, f)\n",
     "    pickle.dump(allcyclenumnodes, f)\n",
     "    pickle.dump(G, f)\n",
-    "    pickle.dump(cycle_numnode_bound, f)"
+    "    pickle.dump(cycle_numnode_bound, f)\n",
+    "    pickle.dump(nodes_id, f)\n",
+    "    pickle.dump(nodes_coords, f)\n",
+    "    pickle.dump(numcycles, f)"
    ]
   }
  ],
