Add new to-do: incorporate gradients

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -35,6 +35,7 @@
    "metadata": {},
    "source": [
     "* Double-check cycle/edge lengths. For example 3-cycle east of Faxe\n",
+    "* Incorporate gradients\n",
     "* X Add cycle permutations for node-based analysis\n",
     "* X Drop non-main nodes\n",
     "* X Drop loops (they are really dangling links)\n",
@@ -151,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "edges = gpd.read_file(PATH['data_in'] + 'network_edges_no_parallel.gpkg')\n",
+    "edges = gpd.read_file(PATH['data_in'] + 'edges_slope.gpkg')\n",
     "nodes = gpd.read_file(PATH['data_in'] + 'nodes_edges_parallel.gpkg')\n",
     "# Set CRS\n",
     "edges.set_crs('epsg:25832')\n",
@@ -161,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d34cad82",
+   "id": "fe07e38b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca03e828",
+   "id": "bdfd9633",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,13 +202,13 @@
     "# Rename length to weight for igraph\n",
     "edges = edges.rename(columns={\"length\": \"weight\"})\n",
     "# Drop unused columns\n",
-    "used_columns = {\"u\":(), \"v\":(), \"weight\":()}\n",
+    "used_columns = {\"u\":(), \"v\":(), \"weight\":(), \"max_slope\":()}\n",
     "for c_name, _ in edges.items():\n",
     "    if c_name not in used_columns:\n",
     "        del edges[c_name]\n",
     "\n",
     "# Reorder columns\n",
-    "edges = edges[['u','v','weight']]"
+    "edges = edges[['u','v','weight','max_slope']]"
    ]
   },
   {
@@ -477,9 +478,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Sanity checks\n",
-    "# for (u, v, wt) in Gnx.edges.data('weight'):\n",
-    "#     print(f\"({u}, {v}, {wt:.8})\")"
+    "# Sanity checks\n",
+    "for (u, v, wt) in Gnx.edges.data('weight'):\n",
+    "    print(f\"({u}, {v}, {wt:.8})\")"
    ]
   },
   {
