--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "source": [
     "* Double-check cycle/edge lengths. For example 3-cycle east of Faxe\n",
-    "* Incorporate gradients\n",
+    "* X Incorporate gradients\n",
     "* X Add cycle permutations for node-based analysis\n",
     "* X Drop non-main nodes\n",
     "* X Drop loops (they are really dangling links)\n",
@@ -126,7 +126,14 @@
     "    cl = len(c)\n",
     "    for i in range(cl):\n",
     "        l += Gnx[c[i%cl]][c[(i+1)%cl]][\"weight\"]\n",
-    "    return l"
+    "    return l\n",
+    "\n",
+    "def getCycleMaxSlope(c):\n",
+    "    ms = 0\n",
+    "    cl = len(c)\n",
+    "    for i in range(cl):\n",
+    "        ms = max([ms, Gnx[c[i%cl]][c[(i+1)%cl]][\"max_slope\"]])\n",
+    "    return ms"
    ]
   },
   {
@@ -162,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe07e38b",
+   "id": "cb292f8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdfd9633",
+   "id": "111873d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "G = ig.Graph.TupleList(edges.itertuples(index=False), directed=False, weights=True)"
+    "G = ig.Graph.TupleList(edges.itertuples(index=False), directed=False, weights=False, edge_attrs = ['weight', 'max_slope'])"
    ]
   },
   {
@@ -273,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "G.simplify(multiple=True, loops=True, combine_edges=min);"
+    "G.simplify(multiple=True, loops=True, combine_edges=dict(weight=min, max_slope=max));"
    ]
   },
   {
@@ -375,12 +382,24 @@
     "        to_delete_ids.append(v.index)\n",
     "        # Add a new edge that combines the deleted ones\n",
     "        sumoflengths = v.incident()[0].attributes()[\"weight\"] + v.incident()[1].attributes()[\"weight\"]\n",
-    "        G.add_edge(v.neighbors()[0].index, v.neighbors()[1].index, weight = sumoflengths)\n",
+    "        maxofslopes = max([v.incident()[0].attributes()[\"max_slope\"], v.incident()[1].attributes()[\"max_slope\"]])\n",
+    "        G.add_edge(v.neighbors()[0].index, v.neighbors()[1].index, weight=sumoflengths, max_slope=maxofslopes)\n",
     "\n",
     "G.delete_vertices(to_delete_ids)\n",
     "\n",
     "# Re-simplify\n",
-    "G.simplify(multiple=True, loops=True, combine_edges=min);"
+    "G.simplify(multiple=True, loops=True, combine_edges=dict(weight=min, max_slope=max));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e98ffcf3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for e in G.es:\n",
+    "    print(e)"
    ]
   },
   {
@@ -478,9 +497,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sanity checks\n",
-    "for (u, v, wt) in Gnx.edges.data('weight'):\n",
-    "    print(f\"({u}, {v}, {wt:.8})\")"
+    "# # Sanity checks\n",
+    "# for (u, v, wt) in Gnx.edges.data('max_slope'):\n",
+    "#     print(f\"({u}, {v}, {wt})\")"
    ]
   },
   {
@@ -497,13 +516,15 @@
     "for c in allcycles_generator:\n",
     "    sourcenode = c[0]\n",
     "    c_length = getCycleLength(c)\n",
+    "    c_max_slope = getCycleMaxSlope(c)\n",
     "    numcycles_unique += 1\n",
     "    if sourcenode in nodes_done:\n",
     "        allcycles_unique[sourcenode][\"cycles\"].append(c)\n",
     "        allcycles_unique[sourcenode][\"lengths\"].append(c_length)\n",
     "        allcycles_unique[sourcenode][\"numnodes\"].append(len(c))\n",
+    "        allcycles_unique[sourcenode][\"max_slopes\"].append(c_max_slope)\n",
     "    else:\n",
-    "        allcycles_unique[sourcenode] = {\"cycles\": [c], \"lengths\": [c_length], \"numnodes\": [len(c)]}\n",
+    "        allcycles_unique[sourcenode] = {\"cycles\": [c], \"lengths\": [c_length], \"numnodes\": [len(c)], \"max_slopes\": [c_max_slope]}\n",
     "        nodes_done.add(sourcenode)\n",
     "print(\"Found \" + str(numcycles_unique) + \" unique cycles for length bound \" + str(cycle_numnode_bound))"
    ]
@@ -522,14 +543,16 @@
     "for c in allcycles_generator:\n",
     "    sourcenode = c[0]\n",
     "    c_length = getCycleLength(c)\n",
+    "    c_max_slope = getCycleMaxSlope(c)\n",
     "    for sourcenode in c:\n",
     "        numcycles += 1\n",
     "        if sourcenode in nodes_done:\n",
     "            allcycles[sourcenode][\"cycles\"].append(c)\n",
     "            allcycles[sourcenode][\"lengths\"].append(c_length)\n",
     "            allcycles[sourcenode][\"numnodes\"].append(len(c))\n",
+    "            allcycles[sourcenode][\"max_slopes\"].append(c_max_slope)\n",
     "        else:\n",
-    "            allcycles[sourcenode] = {\"cycles\": [c], \"lengths\": [c_length], \"numnodes\": [len(c)]}\n",
+    "            allcycles[sourcenode] = {\"cycles\": [c], \"lengths\": [c_length], \"numnodes\": [len(c)], \"max_slopes\": [c_max_slope]}\n",
     "            nodes_done.add(sourcenode)\n",
     "print(\"Found \" + str(numcycles) + \" cycles for length bound \" + str(cycle_numnode_bound))"
    ]
@@ -543,11 +566,13 @@
    "source": [
     "allcyclelengths = np.zeros(numcycles)\n",
     "allcyclenumnodes = np.zeros(numcycles, dtype=int)\n",
+    "allcyclemaxslopes = np.zeros(numcycles)\n",
     "i = 0\n",
     "for j in allcycles:\n",
     "    l = len(allcycles[j][\"lengths\"])\n",
     "    allcyclelengths[i:i+l] = allcycles[j][\"lengths\"]\n",
     "    allcyclenumnodes[i:i+l] = allcycles[j][\"numnodes\"]\n",
+    "    allcyclemaxslopes[i:i+l] = allcycles[j][\"max_slopes\"]\n",
     "    i += l"
    ]
   },
@@ -597,6 +622,7 @@
     "    pickle.dump(allcycles, f)\n",
     "    pickle.dump(allcyclelengths, f)\n",
     "    pickle.dump(allcyclenumnodes, f)\n",
+    "    pickle.dump(allcyclemaxslopes, f)\n",
     "    pickle.dump(G, f)\n",
     "    pickle.dump(cycle_numnode_bound, f)\n",
     "    pickle.dump(nodes_id, f)\n",
