--- a/code/02_explore_loops.ipynb
+++ b/code/02_explore_loops.ipynb
@@ -51,8 +51,11 @@
    "outputs": [],
    "source": [
     "cycle_numnode_bound = 30\n",
-    "cyclelength = [3000, 15000]  # Minimum and maximum of cycle lengths in m\n",
-    "# cyclelength = [10000, 40000]\n",
+    "scenario = \"scenario1\"\n",
+    "\n",
+    "restrictions = {\"scenario1\": {\"cyclelengthmin\": 3000, \"cyclelengthmax\": 15000, \"maxslope\": 5}, # family with small children\n",
+    "                \"scenario2\": {\"cyclelengthmin\": 10000, \"cyclelengthmax\": 40000, \"maxslope\": 7} # teenage/adult leisure cyclist\n",
+    "                }\n",
     "\n",
     "PATH = {\n",
     "    \"data_in\": \"../data/input/faxe/network/\",\n",
@@ -112,10 +115,13 @@
     "        layout.append(nodes_coords[pos])\n",
     "    return layout\n",
     "\n",
-    "def plotCheck(G, nodes_id, nodes_coords, vertex_size = 6):\n",
+    "def plotCheck(G, nodes_id, nodes_coords, vertex_size = 6, edge_color=None):\n",
     "    fig, ax = plt.subplots()\n",
     "    layout = getLayout(G, nodes_id, nodes_coords)\n",
-    "    ig.plot(G, target=ax, vertex_size=vertex_size, layout=layout);\n",
+    "    if edge_color is None:\n",
+    "        ig.plot(G, target=ax, vertex_size=vertex_size, layout=layout);\n",
+    "    else:\n",
+    "        ig.plot(G, target=ax, vertex_size=vertex_size, layout=layout, edge_color=edge_color);\n",
     "    return fig\n",
     "    \n",
     "def getCycleLength(c):\n",
@@ -153,6 +159,7 @@
     "    allcycles = pickle.load(f)\n",
     "    allcyclelengths = pickle.load(f)\n",
     "    allcyclenumnodes = pickle.load(f)\n",
+    "    allcyclemaxslopes = pickle.load(f)\n",
     "    G = pickle.load(f)\n",
     "    cycle_numnode_bound = pickle.load(f)\n",
     "    nodes_id = pickle.load(f)\n",
@@ -163,18 +170,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5253e096",
+   "id": "0bac1ed4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
-    "plotCheck(G, nodes_id, nodes_coords)"
+    "plotCheck(G, nodes_id, nodes_coords);"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f9201c8",
+   "id": "5cf2b625",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c9f65c3",
+   "id": "6952a4f3",
    "metadata": {},
    "source": [
     "## Restrict to length bounds"
@@ -206,23 +213,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32ce8b8a",
+   "id": "0b1107e2",
    "metadata": {},
    "source": [
-    "Go through all nodes and restrict their cycles to the `cyclelength` bounds"
+    "Go through all nodes and restrict their cycles to the scenario's length restrictions"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "627afc6f",
+   "id": "9b966ce4",
    "metadata": {},
    "outputs": [],
    "source": [
     "allcycles_bound = {}\n",
     "for sourcenode in allcycles:\n",
     "    this_lengths = np.array(allcycles[sourcenode]['lengths'])\n",
-    "    mask_this = (this_lengths >= cyclelength[0]) & (this_lengths <= cyclelength[1])\n",
+    "    mask_this = (this_lengths >= restrictions[scenario][\"cyclelengthmin\"]) & (this_lengths <= restrictions[scenario][\"cyclelengthmax\"])\n",
     "    allcycles_bound[sourcenode] = {\"cycles\": list(compress(allcycles[sourcenode]['cycles'], mask_this)),\n",
     "                                   \"lengths\": list(compress(allcycles[sourcenode]['lengths'], mask_this)),\n",
     "                                   \"numnodes\": list(compress(allcycles[sourcenode]['numnodes'], mask_this))}"
@@ -231,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "087cbdea",
+   "id": "6ca4cbc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,30 +250,99 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ef71c53",
+   "id": "f2353b32",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size = vertex_sizes)\n",
-    "plt.text(0,0.04, \"Max # of loops: \" + str(numcycles_max));"
+    "plt.text(0,0.04, \"Max # of loops: \" + str(numcycles_max));\n",
+    "plt.tight_layout()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14d7f3ef",
+   "id": "e9a640b3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig.savefig(PATH[\"plot\"] + \"network_numcycles_\"+str(cyclelength[0])+\"to\"+str(cyclelength[1]))"
+    "fig.savefig(PATH[\"plot\"] + \"network_numcycles_\"+str(restrictions[scenario][\"cyclelengthmin\"])+\"to\"+str(restrictions[scenario][\"cyclelengthmax\"]))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dc3da5a0",
+   "id": "a67d8ec9",
    "metadata": {},
    "source": [
     "## Restrict to acceptable gradients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad4dc360",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allcycles_bound = {}\n",
+    "for sourcenode in allcycles:\n",
+    "    this_lengths = np.array(allcycles[sourcenode]['lengths'])\n",
+    "    this_maxslopes = np.array(allcycles[sourcenode]['max_slopes'])\n",
+    "    mask_this = (this_lengths >= restrictions[scenario][\"cyclelengthmin\"])\n",
+    "    mask_this &= (this_lengths <= restrictions[scenario][\"cyclelengthmax\"]) \n",
+    "    mask_this &= (this_maxslopes <= restrictions[scenario][\"maxslope\"])\n",
+    "    allcycles_bound[sourcenode] = {\"cycles\": list(compress(allcycles[sourcenode]['cycles'], mask_this)),\n",
+    "                                   \"lengths\": list(compress(allcycles[sourcenode]['lengths'], mask_this)),\n",
+    "                                   \"numnodes\": list(compress(allcycles[sourcenode]['numnodes'], mask_this))}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d18fe09d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vertex_sizes=[len(allcycles_bound[k]['cycles']) for k in range(len(allcycles_bound.keys()))]\n",
+    "numcycles_max = max(vertex_sizes)\n",
+    "vertex_sizes = [i/(numcycles_max/20) for i in vertex_sizes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efa53524",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edge_colors = []\n",
+    "for e in G.es:\n",
+    "    if e[\"max_slope\"] > restrictions[scenario][\"maxslope\"]:\n",
+    "        edge_colors.append(\"red\")\n",
+    "    else:\n",
+    "        edge_colors.append(\"grey\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef628c0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=vertex_sizes, edge_color=edge_colors)\n",
+    "plt.text(0,0.04, \"Max # of loops: \" + str(numcycles_max));\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26d07f26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.savefig(PATH[\"plot\"] + \"network_numcycles_\"+str(restrictions[scenario][\"cyclelengthmin\"])+\"to\"+str(restrictions[scenario][\"cyclelengthmax\"])+\"_maxslope\"+str(restrictions[scenario][\"maxslope\"]))"
    ]
   }
  ],
